--- a/android/java/res/layout/brave_wallet_add_custom_asset.xml
+++ b/android/java/res/layout/brave_wallet_add_custom_asset.xml
@@ -131,6 +131,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginVertical="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp"
@@ -151,7 +152,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginStart="12dp"
             android:layout_weight="1"
             android:background="@drawable/crypto_wallet_blue_button"
             android:enabled="false"
