--- a/android/java/res/layout/edit_visible_assets_bottom_sheet.xml
+++ b/android/java/res/layout/edit_visible_assets_bottom_sheet.xml
@@ -55,8 +55,7 @@
         android:id="@+id/rvAssets"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="9.8" />
 
