--- a/components/ai_chat/resources/page/ai_chat_ui.html
+++ b/components/ai_chat/resources/page/ai_chat_ui.html
@@ -5,6 +5,7 @@
     <title>$i18n{siteTitle}</title>
     <link rel="stylesheet" href="chrome-untrusted://resources/brave/css/reset.css">
     <link rel="stylesheet" href="chrome-untrusted://resources/css/text_defaults.css">
+    <link rel="stylesheet" href="chrome-untrusted://resources/brave/fonts/manrope.css">
     <link rel="stylesheet" href="chrome-untrusted://resources/brave/fonts/poppins.css">
     <script src="chrome-untrusted://resources/js/load_time_data_deprecated.js"></script>
     <script src="/strings.js"></script>
