--- a/components/ai_chat/resources/page/components/input_box/style.module.scss
+++ b/components/ai_chat/resources/page/components/input_box/style.module.scss
@@ -10,8 +10,9 @@
 }
 
 .form {
-  background-color: var(--leo-color-container-highlight);
+  background-color: transparent;
   border-radius: 8px;
+  border: 1px solid var(--leo-color-divider-strong);
   display: flex;
 }
 
@@ -19,17 +20,18 @@
   width: 100%;
   padding: 10px 16px;
   resize: none;
-  background-color: var(--leo-color-container-highlight);
+  background-color: transparent;
   border: 0;
   border-radius: inherit;
-  font-family: Poppins, sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
+  font: var(--leo-font-secondary-default-regular);
   color: var(--leo-color-text-primary);
 
   &:focus {
     outline: none;
+  }
+
+  &::placeholder {
+    color: var(--leo-color-text-tertiary);
   }
 }
 
@@ -37,7 +39,7 @@
   background-color: transparent;
   border: 0;
   padding: 14px;
-  color: var(--leo-color-text-primary);
+  color: var(--leo-color-icon-default);
   cursor: pointer;
 }
 
