--- a/android/java/res/values/brave_colors.xml
+++ b/android/java/res/values/brave_colors.xml
@@ -321,5 +321,17 @@
     <color name="terms_of_service_text_color_default">#666D89</color>
     <color name="tipping_warning_default_background">#F0F7FC</color>
     <color name="tipping_logout_warning_background_color">#FFF4D8</color>
-
+    <color name="rewards_private_ads_icon_color1">#E1E2E8</color>
+    <color name="rewards_private_ads_icon_color2">#5D65D3</color>
+    <color name="rewards_private_ads_icon_color3">#A8ADBF</color>
+    <color name="rewards_private_ads_icon_color4">#A6ABE8</color>
+    <color name="rewards_private_ads_icon_color5">#E1E2E8</color>
+    <color name="rewards_private_ads_icon_color6">#F8F5FA</color>
+    <color name="rewards_private_ads_icon_color7">#915EAD</color>
+    <color name="rewards_private_ads_icon_color8">#F0F7FC</color>
+    <color name="rewards_private_ads_icon_color9">#0F75C9</color>
+    <color name="rewards_private_ads_icon_color10">#FDF3F8</color>
+    <color name="rewards_private_ads_icon_color11">#D41C80</color>
+    <color name="rewards_private_ads_icon_color12">#F092C5</color>
+    <color name="rewards_private_ads_icon_color13">#6AB6F4</color>
 </resources>
