--- a/components/playlist/browser/resources/video_frame_contents.html
+++ b/components/playlist/browser/resources/video_frame_contents.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <title>Brave Playlist Player</title>
-<script src="/playlistPlayer.bundle.js"></script>
+<script src="/videoFrameContents.bundle.js"></script>
 </head>
 <body>
   <div id="root"></div>
