--- a/android/java/res/layout/fragment_portfolio.xml
+++ b/android/java/res/layout/fragment_portfolio.xml
@@ -72,8 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:drawablePadding="4dp"
-                android:textSize="14sp"
-                tools:ignore="HardcodedText" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/trend_timeframe"
