--- a/components/ai_chat/resources/page/components/main/style.module.scss
+++ b/components/ai_chat/resources/page/components/main/style.module.scss
@@ -14,6 +14,9 @@
 
 .inputBox {
   width: 100%;
+  padding: 16px;
+  border-top: 1px solid var(--leo-color-divider-subtle);
+  background-color: var(--leo-color-container-background);
 }
 
 .scroller {
