--- a/components/ai_chat/resources/page/components/site_title/style.module.scss
+++ b/components/ai_chat/resources/page/components/site_title/style.module.scss
@@ -7,8 +7,8 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  align-items: center;
   gap: 16px;
-  padding: 14px 0;
 }
 
 .titleBox {
