--- a/android/java/res/layout/rewards_onboarding.xml
+++ b/android/java/res/layout/rewards_onboarding.xml
@@ -29,9 +29,8 @@
                 android:id="@+id/earn_tokens_for_private_ads_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal|top"
                 android:lineSpacingExtra="10sp"
@@ -46,9 +45,8 @@
                 android:id="@+id/earn_tokens_for_private_ads_description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="32dp"
                 android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:lineSpacingExtra="10sp"
