--- a/android/java/res/layout/rewards_onboarding_all_set.xml
+++ b/android/java/res/layout/rewards_onboarding_all_set.xml
@@ -22,9 +22,8 @@
         android:id="@+id/rewards_onboarding_all_set_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|top"
         android:lineSpacingExtra="10sp"
@@ -39,9 +38,8 @@
         android:id="@+id/rewards_onboarding_all_set_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
         android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="10sp"
