--- a/android/java/res/layout/rewards_onboarding_location_choose.xml
+++ b/android/java/res/layout/rewards_onboarding_location_choose.xml
@@ -22,9 +22,8 @@
         android:id="@+id/select_your_country_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|top"
         android:lineSpacingExtra="10sp"
@@ -39,9 +38,8 @@
         android:id="@+id/select_your_country_description"
         android:layout_width="0dp"
         android:layout_height="46dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
         android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="10sp"
@@ -58,8 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="16dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginHorizontal="32dp"
         android:background="@drawable/country_spinner_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
