--- a/components/playlist/browser/resources/playlist.html
+++ b/components/playlist/browser/resources/playlist.html
@@ -5,15 +5,15 @@
 <meta name="viewport" content="width=device-width">
 <title>Brave Playlist</title>
 <link rel="stylesheet" href="chrome-untrusted://resources/css/text_defaults.css">
-<link rel="import" href="chrome-untrusted://resources/html/cr.html">
-<script src="chrome-untrusted://resources/js/cr.js"></script>
-<script src="chrome-untrusted://resources/js/load_time_data_deprecated.js"></script>
-<script src="chrome-untrusted://resources/js/i18n_template_no_process.js"></script>
+<link rel="stylesheet" href="chrome-untrusted://resources/brave/fonts/poppins.css">
 <script src="/playlist.bundle.js"></script>
-<script src="/strings.js"></script>
 <style>
   #root { 
     height: 100%; 
+  }
+
+  body {
+    margin: 0;
   }
 </style>
 </head>
