--- a/android/java/res/layout/activity_add_asset.xml
+++ b/android/java/res/layout/activity_add_asset.xml
@@ -4,10 +4,207 @@
      License, v. 2.0. If a copy of the MPL was not distributed with this file,
      You can obtain one at https://mozilla.org/MPL/2.0/.
 -->
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/wallet_bg">
+    android:fillViewport="true">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/wallet_bg">
 
-</FrameLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/wallet_toolbar_bg_color"
+        android:translationZ="10dp"
+        android:gravity="center_vertical"
+        app:title="@string/brave_wallet_nft_detail_toolbar"
+        app:titleTextColor="@color/wallet_text_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        style="@style/BraveWalletTextView"
+        android:id="@+id/network_title"
+        android:layout_width="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
+        android:text="@string/brave_wallet_select_network_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <Spinner
+        android:id="@+id/network_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="24dp"
+        android:paddingVertical="8dp"
+        android:textColor="@color/brave_wallet_day_night_text_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/network_title" />
+
+    <TextView
+        style="@style/BraveWalletTextView"
+        android:id="@+id/token_name_label"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/wallet_add_custom_asset_token_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/network_spinner" />
+
+    <EditText
+        android:id="@+id/token_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="8dp"
+        android:inputType="text"
+        android:textColor="@color/wallet_text_color"
+        android:textSize="14sp"
+        tools:ignore="LabelFor, Autofill"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_name_label" />
+
+    <TextView
+        android:id="@+id/token_contract_address_title"
+        style="@style/BraveWalletTextView"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/wallet_add_custom_asset_token_contract_address"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_name" />
+
+    <EditText
+        android:id="@+id/token_contract_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="8dp"
+        android:inputType="text"
+        android:textColor="@color/wallet_text_color"
+        android:textSize="14sp"
+        tools:ignore="LabelFor, Autofill"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_contract_address_title" />
+
+    <TextView
+        style="@style/BraveWalletTextView"
+        android:id="@+id/token_symbol_label"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/wallet_add_custom_asset_token_symbol"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_contract_address" />
+
+    <EditText
+        android:id="@+id/token_symbol"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="8dp"
+        android:inputType="text"
+        android:textColor="@color/wallet_text_color"
+        android:textSize="14sp"
+        tools:ignore="LabelFor, Autofill"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_symbol_label" />
+
+    <TextView
+        android:id="@+id/token_decimals_title"
+        style="@style/BraveWalletTextView"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/wallet_add_custom_asset_decimals"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_symbol" />
+
+    <EditText
+        android:id="@+id/token_decimals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="8dp"
+        android:inputType="number"
+        android:textColor="@color/wallet_text_color"
+        android:textSize="14sp"
+        tools:ignore="LabelFor, Autofill"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_decimals_title" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/advanced_section"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="token_id_label,token_id"
+        android:visibility="gone"/>
+
+    <TextView
+        style="@style/BraveWalletTextView"
+        android:id="@+id/token_id_label"
+        android:layout_width="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
+        android:text="@string/wallet_add_custom_asset_token_id"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_decimals"/>
+
+    <EditText
+        android:id="@+id/token_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="24dp"
+        android:inputType="number"
+        android:textColor="@color/wallet_text_color"
+        android:textSize="14sp"
+        tools:ignore="LabelFor, Autofill"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_id_label"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/add"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="16dp"
+        android:background="@drawable/crypto_wallet_blue_button"
+        android:enabled="false"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="8dp"
+        android:text="@string/wallet_add_custom_asset_add_button"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/token_id"
+        app:layout_constraintVertical_bias="0.2"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
