--- a/android/java/res/layout/activity_add_asset.xml
+++ b/android/java/res/layout/activity_add_asset.xml
@@ -22,7 +22,6 @@
         android:background="@color/wallet_toolbar_bg_color"
         android:translationZ="10dp"
         android:gravity="center_vertical"
-        app:title="@string/brave_wallet_nft_detail_toolbar"
         app:titleTextColor="@color/wallet_text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
-        android:text="@string/wallet_add_custom_asset_token_contract_address"
+        android:text="@string/wallet_add_custom_asset_token_address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/token_name" />
@@ -127,6 +126,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/token_symbol_label" />
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/token_decimal_section"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="token_decimals_title,token_decimals" />
+
     <TextView
         android:id="@+id/token_decimals_title"
         style="@style/BraveWalletTextView"
@@ -153,7 +158,7 @@
         app:layout_constraintTop_toBottomOf="@+id/token_decimals_title" />
 
     <androidx.constraintlayout.widget.Group
-        android:id="@+id/advanced_section"
+        android:id="@+id/token_id_section"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="token_id_label,token_id"
