--- a/components/ai_chat/resources/page/components/input_box/style.module.scss
+++ b/components/ai_chat/resources/page/components/input_box/style.module.scss
@@ -3,15 +3,9 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this file,
 // you can obtain one at https://mozilla.org/MPL/2.0/.
 
-.container {
-  padding: 16px;
-  border-top: 1px solid var(--leo-color-divider-subtle);
-  background-color: var(--leo-color-container-background);
-}
-
 .form {
-  background-color: var(--leo-color-container-highlight);
   border-radius: 8px;
+  border: 1px solid var(--leo-color-divider-strong);
   display: flex;
 }
 
@@ -19,17 +13,18 @@
   width: 100%;
   padding: 10px 16px;
   resize: none;
-  background-color: var(--leo-color-container-highlight);
+  background-color: transparent;
   border: 0;
   border-radius: inherit;
-  font-family: Poppins, sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
+  font: var(--leo-font-secondary-default-regular);
   color: var(--leo-color-text-primary);
 
   &:focus {
     outline: none;
+  }
+
+  &::placeholder {
+    color: var(--leo-color-text-tertiary);
   }
 }
 
@@ -37,7 +32,7 @@
   background-color: transparent;
   border: 0;
   padding: 14px;
-  color: var(--leo-color-text-primary);
+  color: var(--leo-color-icon-default);
   cursor: pointer;
 }
 
