--- a/android/java/res/layout/swap_bottom_sheet.xml
+++ b/android/java/res/layout/swap_bottom_sheet.xml
@@ -107,6 +107,42 @@
             android:text="@string/swap_text"
             android:textSize="14sp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="24dp"
+            android:background="@color/wallet_edittext_outline_color" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/deposit_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="4dp"
+            android:paddingStart="24dp"
+            android:textColor="@color/wallet_text_color"
+            android:text="@string/deposit"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:paddingStart="24dp"
+            android:textColor="@color/wallet_secondary_layout_text_color"
+            android:text="@string/deposit_description"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
 </LinearLayout>
