--- a/components/brave_wallet_ui/page/screens/fund-wallet/android/deposit-funds.html
+++ b/components/brave_wallet_ui/page/screens/fund-wallet/android/deposit-funds.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Brave Deposit Funds</title>
+
+    <link rel="stylesheet" href="chrome://resources/brave/leo/css/variables.css">
+    <link rel="stylesheet" href="chrome://resources/css/md_colors.css">
+    <link rel="stylesheet" href="chrome://resources/brave/fonts/poppins.css">
     <script src="chrome://resources/js/load_time_data_deprecated.js"></script>
     <script src="/strings.js"></script>
     <script src="/brave_wallet_deposit_page.bundle.js"></script>
