--- a/components/brave_wallet_ui/page/screens/fund-wallet/android/fund_wallet.html
+++ b/components/brave_wallet_ui/page/screens/fund-wallet/android/fund_wallet.html
@@ -6,6 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Brave Buy</title>
+  <link rel="stylesheet" href="chrome://resources/brave/leo/css/variables.css">
+  <link rel="stylesheet" href="chrome://resources/css/md_colors.css">
+  <link rel="stylesheet" href="chrome://resources/brave/fonts/poppins.css">
   <script src="chrome://resources/js/load_time_data_deprecated.js"></script>
   <script src="/strings.js"></script>
   <script src="/brave_wallet_fund_wallet_page.bundle.js"></script>
