--- a/components/ai_chat/resources/page/components/main/style.module.scss
+++ b/components/ai_chat/resources/page/components/main/style.module.scss
@@ -26,12 +26,20 @@
 }
 
 .header {
-  padding: 16px;
+  padding: 8px 16px;
   border-bottom: 1px solid var(--leo-color-divider-subtle);
   background-color: var(--leo-color-container-background);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.logoBox {
+.actions {
+  --leo-icon-size: 20px;
+  --leo-icon-color: var(--leo-color-icon-default);
+}
+
+.logo {
   --leo-icon-size: 20px;
   --leo-icon-color: linear-gradient(314.42deg, #FA7250 8.49%, #FF1893 43.72%, #A78AFF 99.51%);
 
@@ -45,6 +53,7 @@
   font-weight: 600;
   font-size: 16px;
   color: var(--leo-color-text-secondary);
+  line-height: 1;
 
   span {
     color: var(--leo-color-text-primary);
