--- a/android/java/res/values-night/brave_colors.xml
+++ b/android/java/res/values-night/brave_colors.xml
@@ -223,4 +223,5 @@
     <color name="rewards_private_ads_icon_color11">#AF1769</color>
     <color name="rewards_private_ads_icon_color12">#AF1769</color>
     <color name="rewards_private_ads_icon_color13">#0C5FA3</color>
+    <color name="rewards_estimated_earning_close_color">#EDEEF1</color>
 </resources>
