Set default background for playlist web ui

--- a/components/playlist/browser/resources/video_frame_contents.html
+++ b/components/playlist/browser/resources/video_frame_contents.html
@@ -10,6 +10,11 @@
 <title>Brave Playlist Player</title>
 <script src="/videoFrameContents.bundle.js"></script>
 </head>
+<style>
+  body {
+    background-color: var(--leo-color-container-background);
+  }
+</style>
 <body>
   <div id="root"></div>
 </body>
