--- a/android/java/res/drawable/tab_gradient_separator.xml
+++ b/android/java/res/drawable/tab_gradient_separator.xml
@@ -6,9 +6,9 @@
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:centerColor="#BF14A2"
-        android:endColor="#F73A1C"
-        android:startColor="#4C54D2"
+        android:centerColor="@color/wallet_gradient_center_color"
+        android:endColor="@color/wallet_gradient_end_color"
+        android:startColor="@color/wallet_gradient_start_color"
         android:type="linear"
         android:angle="0"/>
 </shape>
