Add shadow above the bottom navigation view
Shadows are so messed up on Android that even Google itself stopped using native support
and decided to add them manually to solve the problem. We are adopting the same approach used
for the Chromium bottom bar.
Link: https://source.chromium.org/chromium/chromium/src/+/main:chrome/browser/ui/android/toolbar/java/res/layout/bottom_control_container.xml;l=1?q=bottom_control_container.xml

--- a/android/java/res/layout/activity_brave_wallet.xml
+++ b/android/java/res/layout/activity_brave_wallet.xml
@@ -29,6 +29,7 @@
             app:layout_scrollFlags="scroll|enterAlways|snap" />
 
         <include layout="@layout/wallet_backup_banner"/>
+
         <org.chromium.chrome.browser.custom_layout.NonSwipeableViewPager
             android:id="@+id/navigation_view_pager"
             android:layout_width="match_parent"
@@ -36,6 +37,14 @@
             android:layout_weight="1"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+        <ImageView
+            android:id="@+id/bottom_container_top_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_shadow_height"
+            android:src="@drawable/modern_toolbar_shadow"
+            android:scaleType="fitXY"
+            android:scaleY="-1"
+            tools:ignore="ContentDescription" />
 
         <org.chromium.chrome.browser.custom_layout.BottomNavigationViewWithIndicator
             android:id="@+id/wallet_bottom_navigation"
