--- a/android/java/res/layout/activity_brave_wallet.xml
+++ b/android/java/res/layout/activity_brave_wallet.xml
@@ -29,22 +29,27 @@
             app:layout_scrollFlags="scroll|enterAlways|snap" />
 
         <include layout="@layout/wallet_backup_banner"/>
-
-        <org.chromium.chrome.browser.custom_layout.NonSwipeableViewPager
-            android:id="@+id/navigation_view_pager"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:layout_weight="1">
+            <org.chromium.chrome.browser.custom_layout.NonSwipeableViewPager
+                android:id="@+id/navigation_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <ImageView
-            android:id="@+id/bottom_container_top_shadow"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/toolbar_shadow_height"
-            android:src="@drawable/modern_toolbar_shadow"
-            android:scaleType="fitXY"
-            android:scaleY="-1"
-            tools:ignore="ContentDescription" />
+            <ImageView
+                android:layout_gravity="bottom"
+                android:id="@+id/bottom_container_top_shadow"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/toolbar_shadow_height"
+                android:src="@drawable/modern_toolbar_shadow"
+                android:scaleType="fitXY"
+                android:scaleY="-1"
+                tools:ignore="ContentDescription" />
+
+        </FrameLayout>
 
         <org.chromium.chrome.browser.custom_layout.BottomNavigationViewWithIndicator
             android:id="@+id/wallet_bottom_navigation"
