--- a/android/java/res/layout/activity_brave_wallet.xml
+++ b/android/java/res/layout/activity_brave_wallet.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-            <org.chromium.chrome.browser.custom_layout.NonSwipeableViewPager
+            <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/navigation_view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
